# prompt-optimizer

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  config.yaml  initial_prompt.txt  prompt_optimizer.py  pyproject.toml  requirements.txt  test_cases.json  web_app.py
agents/frontend-developer/: IDENTITY.md  SOUL.md
agents/frontend-engineer/: IDENTITY.md  SOUL.md  USER.md
agents/product-manager/: IDENTITY.md  SOUL.md  USER.md  prompt-optimizer-requirements.md
agents/senior-developer/: IDENTITY.md  README.md  SOUL.md  USER.md  prompt-optimizer-tech.md
agents/software-architect/: IDENTITY.md  SOUL.md  USER.md  prompt-optimizer-architecture.md
agents/test-engineer/: IDENTITY.md  SOUL.md  USER.md
docs/: llm-judge-architecture.md
frontend/: index.html  package.json
frontend/src/: App.vue
frontend/src/api/: index.js
frontend/src/components/: PromptEditor.vue  PromptPreview.vue  ScoreRadar.vue  Toast.vue  VersionTimeline.vue
frontend/src/views/: Home.vue
src/evaluator/: llm_judge.py
src/prompt_optimizer/: __init__.py
src/prompt_optimizer/core/: __init__.py  evaluator.py  optimizer.py  optimizer_core.py  prompt_manager.py  test_data_manager.py
tests/: test_core.py
